--- a/_config.yml
+++ b/_config.yml
@@ -74,11 +74,11 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ Meta"
+sidebar-about-description: "要做一个有 AwA 的同学"
 sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
-featured-tags: true # whether or not using Feature-Tags
+featured-tags: false # whether or not using Feature-Tags
 featured-condition-size: 1 # A tag will be featured if the size of it is more than this condition value
 
 # Progressive Web Apps
@@ -89,14 +89,14 @@ service-worker: true
 page-mathjax: false
 
 # Friends
-friends:
-  [
-    { title: "乱序（Midare）", href: "http://mida.re/" },
-    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-    { title: "Kun Qian", href: "http://kunq.me" },
-    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-    { title: "SmdCn", href: "http://blog.smdcn.net" },
-    { title: "JiyinYiyong", href: "http://tiye.me/" },
-    { title: "DHong Say", href: "http://dhong.co" },
-    { title: "尹峰以为", href: "http://ingf.github.io/" },
-  ]
+#friends:
+#  [
+#    { title: "乱序（Midare）", href: "http://mida.re/" },
+#    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
+#    { title: "Kun Qian", href: "http://kunq.me" },
+#    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
+#    { title: "SmdCn", href: "http://blog.smdcn.net" },
+#    { title: "JiyinYiyong", href: "http://tiye.me/" },
+#    { title: "DHong Say", href: "http://dhong.co" },
+#    { title: "尹峰以为", href: "http://ingf.github.io/" },
+#  ]
